--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "postcss-px2rem",
-  "description": "Postcss version of px2rem",
-  "version": "0.3.0",
-  "homepage": "https://github.com/songsiqi/px2rem-postcss",
-  "author": "songsiqi <songsiqi2006@126.com>",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:songsiqi/px2rem-postcss.git"
+  "name": "postcss-px2rem-exclude",
+  "version": "0.0.3",
+  "description": "Based on postcss-px2rem added the exclude folder options.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "postcss": "^5.0.0",
     "px2rem": "~0.5.0"
   },
-  "devDependencies": {
-    "mocha": "^2.1.0",
-    "autoprefixer": "^6.1.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/saionjisekai/px2rem-postcss.git"
   },
-  "scripts": {
-    "test": "mocha"
-  },
-  "main": "index.js",
   "keywords": [
-    "px2rem",
-    "postcss-plugin"
+    "postcss",
+    "px2rem"
   ],
-  "license": "MIT"
+  "author": "sekai",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/saionjisekai/px2rem-postcss/issues"
+  },
+  "homepage": "https://github.com/saionjisekai/px2rem-postcss#readme"
 }
