--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "postcss-px2rem-exclude",
-  "version": "0.0.6",
-  "description": "Based on postcss-px2rem added the exclude folder options.",
+  "name": "postcss-px2rem-include",
+  "version": "0.0.1",
+  "description": "Based on postcss-px2rem added the include options.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,17 +12,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/saionjisekai/px2rem-postcss.git"
+    "url": "git+https://github.com/xiaoyu2er/px2rem-postcss.git"
   },
   "keywords": [
     "postcss",
     "px2rem",
-    "exclude"
+    "include"
   ],
-  "author": "sekai",
+  "author": "xiaoyu2er",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/saionjisekai/px2rem-postcss/issues"
+    "url": "https://github.com/xiaoyu2er/px2rem-postcss/issues"
   },
-  "homepage": "https://github.com/saionjisekai/px2rem-postcss#readme"
+  "homepage": "https://github.com/xiaoyu2er/px2rem-postcss#readme"
 }
