--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "postcss-px2rem-include",
-  "version": "0.0.2",
+  "name": "px2rem-postcss-with-include",
+  "version": "0.0.3",
   "description": "Based on postcss-px2rem added the include options.",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/xiaoyu2er/px2rem-postcss.git"
+    "url": "git+https://github.com/yly24/px2rem-postcss-with-include"
   },
   "keywords": [
     "postcss",
@@ -24,5 +24,5 @@
   "bugs": {
     "url": "https://github.com/xiaoyu2er/px2rem-postcss/issues"
   },
-  "homepage": "https://github.com/xiaoyu2er/px2rem-postcss#readme"
+  "homepage": "https://github.com/yly24/px2rem-postcss-with-include/#readme"
 }
